Правки для себя.

--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,3 @@
-/*Основные стили и общие классы для всех страниц*/
-font-family: 'Cuprum', sans-serif;
-
 /*Подключаем PT SANS*/ 
 @font-face {
   font-family: 'PT Sans';
@@ -149,6 +146,10 @@ img {
   display: none;
 }
 
+/*
+.backgraund-red{
+  background-color: #ee3643;
+}*/
 /*===========================================*/
 
 body{
@@ -215,7 +216,7 @@ header {
   padding: 0;
   margin-left: -0.25em;
   padding-top: 12px;
-  padding-bottom: 11px;
+  padding-bottom: 12px;
   vertical-align: top;   
   color: #ffffff; 
 }
@@ -224,6 +225,7 @@ header {
   display: inline-block;
   margin: 0;
   padding: 0;
+  font-size: inherit;
   text-decoration: none;  
   color: #ffffff; 
 }
@@ -234,9 +236,16 @@ header {
 
 .iu-search {
   width: 250px;  
+  margin-right: 10px;
   padding-right: 10px;
-  padding-left: 10px;
+  padding-left: 14px;
+  cursor: pointer;
 }
+
+.icon-search {
+  margin-right: 7px;
+}
+
 .search-form {
   display:inline-block;
 }
@@ -262,19 +271,30 @@ header {
   display: inline-block;
 }
 
+.icon-bookmark {
+  margin-right: 5px;  
+}
 .iu-marker:active {
   opacity: 0.6;
 } 
+.iu-basket {
+  width: 131px;
+}
 
 .iu-basket:active {
   opacity: 0.6;
-} 
-
-.iu-checkout {
-  text-align: center;  
-  background-color: #63a63e;
 }
- 
+
+.icon-basket {
+  margin-right: 7px;
+}
+.iu-checkout {
+ margin-left: 0;
+ padding-left: 0; 
+ text-align: center;  
+ background-color: #63a63e;
+}
+
 .iu-checkout:hover {
   background-color: #5fbb2d; 
 }
@@ -291,6 +311,7 @@ header {
 .lp-shop {
   float:left;
   width:250px;
+  padding-top: 4px;
   padding-left: 50px;
   /*padding-right: 10px;*/
   font-style:italic;
@@ -365,6 +386,7 @@ header {
 .lp-login-enter {
   float: left;
   width: 120px; 
+  
   margin-right: 10px;  
   
   cursor: pointer;
@@ -440,6 +462,7 @@ header {
 
 .icon-logout {
   margin-left: 25px;
+  cursor: pointer;
 }
 
 .point {
@@ -545,50 +568,52 @@ color: #ffffff;
 
 }
 .service-description {
-display: inline-block;
-width: 135px;
-margin: 15px 0 0;
-padding: 10px 0;
+  display: inline-block;
+  width: 135px;
+  margin: 15px 0 0;
+  padding: 10px 0;
 
-font-size: 14px;
-line-height: 18px;
-font-weight: bold;
-text-transform: uppercase;
-text-align: center;
+  font-size: 14px;
+  line-height: 18px;
+  font-weight: bold;
+  text-transform: uppercase;
+  text-align: center;
 
-background: rgba(178, 178, 178, 0.3);
-color: #ffffff;
-border-radius: 3px;  
+  background: rgba(178, 178, 178, 0.3);
+  color: #ffffff;
+  border-radius: 3px;  
+
+ cursor: pointer;
 }
 .service-description:hover {
-background: rgba(178, 178, 178, 0.5);
+  background: rgba(178, 178, 178, 0.5);
 } 
 .service-description:active {
-background: rgba(178, 178, 178, 0.7);
+  background: rgba(178, 178, 178, 0.7);
 } 
 
 /*Отдельные блоки. Строим сетку*/ 
 .service-name.materials {
-margin-left: 0;
-background-color: #f6b22d;
-background-image: url("../img/index-pail.png");
-background-repeat: no-repeat;
-background-position: 83% center;
+  margin-left: 0;
+  background-color: #f6b22d;
+  background-image: url("../img/index-pail.png");
+  background-repeat: no-repeat;
+  background-position: 83% center;
 
 }
 
 .service-name.tool {
-background-color: #4aafde; 
-background-image: url("../img/index-drill.png");
-background-repeat: no-repeat;
-background-position: 86% center;
+  background-color: #4aafde; 
+  background-image: url("../img/index-drill.png");
+  background-repeat: no-repeat;
+  background-position: 86% center;
 }
 
 .service-name.technics { 
-background-color: #cc79d1;
-background-image: url("../img/index-tractor.png");
-background-repeat: no-repeat;
-background-position: 85% center;  
+  background-color: #cc79d1;
+  background-image: url("../img/index-tractor.png");
+  background-repeat: no-repeat;
+  background-position: 85% center;  
 }
 
 .slider {
@@ -807,7 +832,11 @@ cursor: default;
 .item-actions-bookmark:active {
   border: 3px solid #32425c;
   opacity: 0.3;
+  
 }
+
+
+
 .item-actions-buy:hover {
   background-color: #5fbb2d;
   border: 3px solid #5fbb2d;
@@ -825,6 +854,7 @@ cursor: default;
   border: 3px solid #518534;
 
 }
+
 /*---------------------------*/
 .item {  
   position: relative;
@@ -914,7 +944,7 @@ cursor: default;
     border-style: solid;
     border-width: 19px 0 19px 19px;
     
-   border-color: #ffffff #ffffff #ffffff #ee3643; 
+   border-color: #ffffff #ffffff #ffffff #ee3643;
    
 }
 
@@ -1225,6 +1255,11 @@ cursor: default;
 .about {
   height: 535px;  
 }
+
+.about h2 {
+  text-transform: uppercase;
+}
+
 .about-company{
   float: left;
   width: 540px;
@@ -1607,7 +1642,7 @@ footer{
 .goods-page-sort {
   width: 100%;
   height: 38px;
-  margin: 22px 0;
+  margin: 18px 0 22px 0;
   font-family: "PT Sans", "Tahoma", sans-serif;
   font-size: 13px;
   line-height: 19px;  
@@ -1618,6 +1653,9 @@ footer{
   display: inline-block;
   margin: 0;
   padding-left: 20px;  
+  font-family: "PT Sans", "Tahoma", sans-serif;
+  font-size: 13px;
+  line-height: 19px;  
 }
 
 .goods-page-sort>a {
@@ -1769,9 +1807,11 @@ footer{
 }
 
 .filter-title {  
-  margin: 22px 0;
-  padding: 11px 19px;
-
+  margin: 18px 0 22px 0;
+  padding: 10px 19px;
+  font-family: "PT Sans", "Tahoma", sans-serif;
+  font-size: 13px;
+  line-height: 18px;  
   background-color: #f7f3ec;
   color: #000000;
   border-radius: 3px;  
@@ -2167,4 +2207,4 @@ input[type="submit"]{
 .error-fields {
   border: 3px solid #ee3643;
   border-radius: 2px;  
-}
+}}
